--- a/api-example/package.json
+++ b/api-example/package.json
@@ -13,7 +13,8 @@
     "loopback-boot": "^2.2.0",
     "loopback-connector-mongodb": "^1.4.5",
     "loopback-datasource-juggler": "^2.7.0",
-    "serve-favicon": "^2.0.1"
+    "serve-favicon": "^2.0.1",
+    "cors": "~2.5.2"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
