--- a/proxy-example-new/server/config.json
+++ b/proxy-example-new/server/config.json
@@ -1,7 +1,7 @@
 {
   "restApiRoot": "/_internal",
   "host": "0.0.0.0",
-  "port": 3000,
-  "https-port": 3001,
-  "url": "https://localhost:3001/"
+  "port": 80,
+  "https-port": 443,
+  "url": "http://localhost/"
 }
