--- a/api-example/package.json
+++ b/api-example/package.json
@@ -8,13 +8,15 @@
   },
   "dependencies": {
     "compression": "^1.0.3",
+    "cors": "~2.5.2",
     "errorhandler": "^1.1.1",
+    "express": "^4.10.6",
     "loopback": "^2.5.0",
     "loopback-boot": "^2.2.0",
     "loopback-connector-mongodb": "^1.4.5",
     "loopback-datasource-juggler": "^2.7.0",
-    "serve-favicon": "^2.0.1",
-    "cors": "~2.5.2"
+    "q": "^1.1.2",
+    "serve-favicon": "^2.0.1"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
